--- a/index.html
+++ b/index.html
@@ -5,55 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            max-width: 600px;
-            margin: 50px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        input[type="text"], input[type="email"], input[type="password"] {
+        /* Add some basic styling for better presentation */
+        input[type=text], input[type=password] {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 4px;
             box-sizing: border-box;
         }
-        input[type="submit"] {
-            background-color: #007bff;
-            color: #fff;
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
             border: none;
-            padding: 12px 20px;
-            border-radius: 5px;
+            border-radius: 4px;
             cursor: pointer;
-            font-size: 16px;
+            width: 100%;
         }
-        input[type="submit"]:hover {
-            background-color: #0056b3;
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        .container {
+            padding: 16px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Registration Form</h2>
-        <form action="#" method="post">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <input type="submit" value="Register">
-        </form>
-    </div>
+
+<h2>Registration Form</h2>
+
+<div class="container">
+    <label for="username"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" id="username" required>
+
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" id="email" required>
+
+    <label for="password"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" id="password" required>
+
+    <button id="registerBtn">Register</button>
+</div>
+
+<script src="index.js"></script>
 </body>
 </html>
