--- a/index.html
+++ b/index.html
@@ -3,56 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Form</title>
-    <style>
-        /* Add some basic styling for better presentation */
-        input[type=text], input[type=password] {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        .container {
-            padding: 16px;
-        }
-    </style>
+    <title>User Registration</title>
 </head>
 <body>
+    <h1>User Registration</h1>
+    
+    <form id="registrationForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" required><br>
 
-<h2>Registration Form</h2>
+        <label for="email">Email:</label>
+        <input type="email" id="email" required><br>
 
-<div class="container">
-    <label for="username"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" id="username" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" required><br>
 
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" id="email" required>
+        <label for="dob">Date of Birth:</label>
+        <input type="date" id="dob" required><br>
 
-    <label for="password"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" id="password" required>
+        <label for="terms">Accepted terms?</label>
+        <input type="checkbox" id="terms" required><br>
 
-    <button id="registerBtn">Register</button>
-</div>
+        <button type="submit">Register</button>
+    </form>
 
-<script src="index.js"></script>
+    <table id="userTable">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Password</th>
+                <th>Date of Birth</th>
+                <th>Accepted Terms?</th>
+            </tr>
+        </thead>
+        <tbody id="userList">
+            <!-- User entries will be added here -->
+        </tbody>
+    </table>
+
+    <script src="index.js"></script>
 </body>
 </html>
