--- a/index.html
+++ b/index.html
@@ -1,109 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registration</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* Center the table */
-    .center-table {
-      margin: auto;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>User Registration</title>
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="container mt-5">
-    <h2>User Registration</h2>
-    <!-- Registration Form -->
-    <form id="registrationForm">
-      <div class="mb-3">
-        <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="name" required>
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" required>
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" required>
-      </div>
-      <div class="mb-3">
-        <label for="dob" class="form-label">Date of Birth</label>
-        <input type="date" class="form-control" id="dob" required>
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="terms" required>
-        <label class="form-check-label" for="terms">I accept the terms and conditions</label>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
 
-    <!-- Registered Users Table -->
-    <h2 class="mt-5">Registered Users</h2>
-    <table class="table center-table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Email</th>
-          <th>Password</th>
-          <th>Date of Birth</th>
-          <th>Accepted terms?</th>
-        </tr>
-      </thead>
-      <tbody id="userTableBody">
-        <!-- User entries will be added here -->
-      </tbody>
-    </table>
-  </div>
+<div class="container">
+  <h2>User Registration</h2>
+  <form id="registration-form">
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+    </div>
+    <div class="form-group">
+      <label for="dob">Date of Birth:</label>
+      <input type="date" id="dob" name="dob" required>
+    </div>
+    <div class="form-group">
+      <label for="terms">Accept Terms:</label>
+      <input type="checkbox" id="terms" name="terms" required>
+    </div>
+    <button type="submit">Submit</button>
+  </form>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    // Function to add a new row to the table
-    function addRowToTable(name, email, password, dob, acceptedTerms) {
-      const tableBody = document.getElementById('userTableBody');
-      const newRow = `
-        <tr>
-          <td>${name}</td>
-          <td>${email}</td>
-          <td>${password}</td>
-          <td>${dob}</td>
-          <td>${acceptedTerms ? 'Yes' : 'No'}</td>
-        </tr>
-      `;
-      tableBody.innerHTML += newRow;
-    }
+  <table id="user-table">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Password</th>
+        <th>Dob</th>
+        <th>Accepted terms?</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Entries will be dynamically added here -->
+    </tbody>
+  </table>
+</div>
 
-    // Function to handle form submission
-    document.getElementById('registrationForm').addEventListener('submit', function(event) {
-      event.preventDefault(); // Prevent default form submission
-      // Get form values
-      const name = document.getElementById('name').value;
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-      const dob = document.getElementById('dob').value;
-      const acceptedTerms = document.getElementById('terms').checked;
-      // Validate email format and age
-      const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-      const dobDate = new Date(dob);
-      const currentDate = new Date();
-      const age = Math.floor((currentDate - dobDate) / (365.25 * 24 * 60 * 60 * 1000)); // Calculate age
-      if (!emailRegex.test(email)) {
-        alert('Please enter a valid email address.');
-        return;
-      }
-      if (age < 18 || age > 55) {
-        alert('You must be between 18 and 55 years old to register.');
-        return;
-      }
-      // Add new row to the table
-      addRowToTable(name, email, password, dob, acceptedTerms);
-      // Clear form fields
-      document.getElementById('registrationForm').reset();
-    });
-  </script>
+<script src="index.js"></script>
 </body>
 </html>
