--- a/index.html
+++ b/index.html
@@ -9,39 +9,44 @@
 <body>
 
 <div class="container">
-  <h2>User Registration</h2>
-  <form id="registration-form">
+  <h1> Registration Form</h1>
+
+  <form id="registrationForm" class="form">
     <div class="form-group">
       <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
+      <input type="text" id="name" name="name" class="input-field" required>
     </div>
     <div class="form-group">
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" class="input-field" required>
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password" class="input-field" required>
     </div>
     <div class="form-group">
       <label for="dob">Date of Birth:</label>
-      <input type="date" id="dob" name="dob" required>
+      <input type="date" id="dob" name="dob" class="input-field" required>
     </div>
     <div class="form-group">
-      <label for="terms">Accept Terms:</label>
       <input type="checkbox" id="terms" name="terms" required>
+      <label for="terms">I accept the terms and conditions</label>
     </div>
-    <button type="submit">Submit</button>
+    <button type="submit" class="submit-btn">Submit</button>
   </form>
 
-  <table id="user-table">
+  <table id="userTable">
     <thead>
       <tr>
-        <th>Name</th>
+        <th>Name</th>    
+
         <th>Email</th>
+
         <th>Password</th>
-        <th>Dob</th>
-        <th>Accepted terms?</th>
+
+        <th>DOB</th>
+
+        <th>Accepted Terms?</th>
       </tr>
     </thead>
     <tbody>
