--- a/index.html
+++ b/index.html
@@ -1,44 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registration</title>
-  <link rel="stylesheet" type="text/css" href="index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>registrationForm wd101</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <style>
+        /* Custom styles */
+        /* Change the border color of invalid input to blueviolet */
+        input:invalid {
+            border-color:blueviolet; /* blueviolet */
+        }
+
+        /* Change the border color of valid input to brown */
+        input:valid {
+            border-color:brown; /* brown */
+        }
+
+    </style>
 </head>
-<body>
-  <div class="container">
-    <form id="registrationForm">
-      <h1>Registration Form</h1>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required placeholder="Enter Name"><br><br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required placeholder="Enter Email"><br><br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required placeholder="Enter Password"><br><br>
-      <label for="dob">Date of Birth:</label>
-      <input type="date" id="dob" name="dob" required placeholder="DOB"><br><br>
-      <label for="terms">Accepted terms?</label>
-      <input type="checkbox" id="terms" name="terms" required><br><br>
-      <input type="submit" value="submit">
+
+<body class="flex flex-col justify-center items-center bg-gray-100">
+    <form action="" id="reg-form" class="bg-white shadow-md w-1/3 mt-8 p-8 rounded-lg">
+        <h1 class="text-3xl font-bold mb-4 text-center">REGISTRATION FORM</h1>
+        <div class="inside-form-class">
+            <div class="form-element mb-4">
+                <label for="Name" class="block text-black text-sm font-bold mb-2">Name:</label>
+                <input type="text" id="name" name="name" placeholder="Please Enter Full Name" required
+                    class="border w-full px-4 py-2 leading-tight focus:outline-none focus:border-gray-500">
+            </div>
+            <div class="form-element mb-4">
+                <label for="Email" class="block text-black text-sm font-bold mb-2">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Please Enter Email" required
+                    class="border w-full px-4 py-2 leading-tight focus:outline-none focus:border-gray-500">
+            </div>
+            <div class="form-element mb-4">
+                <label for="birthday" class="block text-black text-sm font-bold mb-2">Date-Of-Birth:</label>
+                <input type="date" id="dob" name="dob" placeholder="dd-mm-yyyy" required
+                    class="border w-full px-4 py-2 leading-tight focus:outline-none focus:border-gray-500">
+            </div>
+            <div class="form-element mb-4">
+                <label for="password" class="block text-black text-sm font-bold mb-2">Password:</label>
+                <input type="password" id="password" name="password" placeholder=" Please Enter Password" required
+                    class="border w-full px-4 py-2 leading-tight focus:outline-none focus:border-gray-500">
+            </div>
+            <div class="form-checkbox mb-4">
+                <input type="checkbox" id="acceptedterms" name="acceptedterms"
+                    class="mr-2 leading-tight focus:outline-none ">
+                <label for="checkbox" class="text-black text-sm">Accept terms & conditions</label>
+            </div>
+            <div class="form-button">
+                <button type="submit" id="submit"
+                    class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none">
+                    Submit
+                </button>
+            </div>
+        </div>
     </form>
-  </div>
 
-  <table id="entriesTable">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Password</th>
-        <th>DOB</th>
-        <th>Accepted terms?</th>
-      </tr>
-    </thead>
-    <tbody id="entries">
-        
-    </tbody>
-  </table>
+    <div id="user-table">
 
-  <script src="index.js"></script>
+    </div>
+
+    <script src="index.js"></script>
+
 </body>
+
 </html>
